# realxianyu

./: .dockerignore  .env.example  .gitignore  .rooignore  .roomodes  AGENTS.md  AGENT_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_VERIFICATION_REPORT.md  Dockerfile  Dockerfile.python  MEMORY.md  QUICKSTART.md  README.md  SECURITY.md  USER_GUIDE.md  codecov.yml  coverage.xml  docker-compose.yml  package.json  pr52.diff  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  service.sh  start.bat  start.sh  supervisor.sh  xianyu.bat
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml  stale.yml
.roo/: roo.md
.roo/rules-ui-designer/: rules.md
client/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
client/src/: App.jsx  App.tsx
config/: config.example.yaml
config/categories/: express.yaml  freight.yaml
config/templates/: reply_templates.json
data/quote_data/: courier_aliases.json  item_weights.json  region_aliases.json
database/migrations/: 0000_schema_version.sql  0013_foreign_keys.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_INFRA.md  DOCUMENTATION_AUDIT.md  MICROSERVICE_ROADMAP.md  MIGRATION_GUIDE.md  PLAN-UI-REFACTOR.md  PROJECT_MINDMAP_CLEAR_V1.md  PROJECT_MODULE_ROADMAP_XY-MOD-004.md  PROJECT_PLAN.md  README.md  SUCCESS_BENCHMARK_AND_SURPASS_PLAN.md  frontend-design-token-page-spec-mapping.md  frontend-onboarding-module-breakdown.md  qa-release-verdict.md  xianguanjiajieruapi.md
docs/for-agents/: index.md
docs/qa/: minimal-e2e-gate-template.md
docs/release/: 2026-03-20-thread-safety-log-terminal.md  2026-03-31-rgv587-server-overload-fix.md  XY-LASTMILE-BE-20260303-1123-无需改动证明.md
docs/reviews/: xy-audit-04-gate.md  xy-audit-05-sre.md  xy-mod-003-cross-validation-quality-gate.md
infra/: README.md
infra/scripts/: setup-local.sh  teardown-local.sh
infra/terraform/: main.tf
k8s/: canary-deployment.yaml
plans/: ROO_PHASE2_EXECUTION_BRIEF.md  dashboard-server-refactor-plan.md  pricing-system-refactor.md  project-overview-and-optimization.md
scripts/: build_release.sh  diagnose.py  install-desktop.bat  install-launchd.sh  migrate_data.py  prepare_offline.sh  rollback.sh  update.bat  update.sh
scripts/macos/: com.realxianyu.plist  install-desktop.sh  install_service.sh  start.command
scripts/windows/: build_exe.bat  install-desktop.bat  install.bat  menu.bat  pack_offline_playwright.bat  pack_offline_playwright.exclude  simple_config.bat  start_module.bat  status.bat  stop_module.bat  view_logs.bat
server/: .env.example  package-lock.json  package.json
server/src/: app.js
services/: conftest.py  pytest.ini
services/ai-service/: Dockerfile  pyproject.toml  schema.sql
services/ai-service/app/: client.py  context.py  main.py  state_machine.py
services/ai-service/app/prompts/: chat.j2  quote.j2
services/common/: README.md  pyproject.toml
services/common/schema/: phase4_indexes.sql
services/common/tests/: test_cache.py  test_database.py  test_dual_write.py
services/common/xianyuflow_common/: __init__.py  cache.py  config.py  database.py  dual_write.py  kafka.py  metrics.py  telemetry.py
services/common/xianyuflow_common/models/: __init__.py  base.py
services/gateway-service/: Dockerfile  pyproject.toml
services/gateway-service/app/: client.py  main.py  signing.py
services/gateway-service/app/routes/: __init__.py  orders.py  products.py
services/gateway-service/tests/: test_main.py  test_signing.py
services/message-service/: Dockerfile  pyproject.toml
services/message-service/app/: __init__.py  connection_pool.py  handler.py  main.py  reply.py  websocket.py
services/message-service/tests/: load_test.py
services/order-service/: Dockerfile  pyproject.toml
services/order-service/app/: __init__.py  main.py  models.py  state_machine.py  virtual_goods.py
services/quote-service/: Dockerfile  pyproject.toml
services/quote-service/app/: __init__.py  cost_table.py  engine.py  main.py  providers.py
src/: __init__.py  cli.py  dashboard_server.py  main.py  setup_wizard.py  windows_launcher.py
src/cli/: __init__.py  __main__.py  base.py  cmd_main.py  cmd_module.py  cmd_orders.py  cmd_quote.py  main.py
src/core/: __init__.py  browser_client.py  config.py  config_models.py  cookie_cloud_client.py  cookie_grabber.py  cookie_health.py  cookie_store.py  crypto.py  database.py  doctor.py  drissionpage_client.py  error_handler.py  goofish_im_cookie.py  logger.py  migration.py  notify.py  slider_solver.py  slider_store.py  startup_checks.py  update_config.py  utils.py
src/dashboard/: config_service.py  mimic_ops.py  module_console.py  repository.py  router.py
src/lite/: config.py  xianyu_api.py
tests/: conftest.py  test_accounts_service_full.py  test_analytics_service_full.py  test_auto_publish_cov100.py  test_bargain_tracker_cov100.py  test_batch4_interfaces_cov100.py  test_batch4_misc_cov100.py  test_batch4_orders_cov100.py  test_batch4_quote_cov100.py  test_batch4_ticketing_cov100.py  test_batch4_xgj_cov100.py  test_brand_assets_rename_cov100.py  test_brand_assets_zip_cov100.py  test_browser_client_targeted_round5_part1.py  test_cli_cov100.py  test_cli_module.py  test_cli_more.py  test_cli_targeted_round5_part1.py  test_cli_targeted_round9_part1.py  test_cli_virtual_goods_wave_c.py  test_compliance_safety_full.py  test_config.py  test_content_service_cov100.py  test_content_service_full.py  test_cookie_cloud_targeted.py  test_cookie_grabber.py  test_core_browser_client_full.py  test_core_crypto_performance_main.py  test_core_error_handler_full.py  test_core_modules_coverage.py  test_core_playwright_client_full.py  test_dashboard_coverage.py  test_dashboard_router.py  test_dashboard_router_core.py  test_dashboard_routes.py  test_dashboard_routes_extended.py  test_dashboard_routes_full.py  test_dashboard_server.py  test_dashboard_server_cov100.py  test_dashboard_services.py  (+111 more)
tests/unit/: test_doctor.py  (+32 more)
(+239 files in other folders)
